# djangoqueries

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  LICENSE.md  Makefile  README.md  manage.py  pyproject.toml  requirements.txt  setup.cfg
blog/: __init__.py  apps.py  models.py  tests.py
blog/fixtures/: blog.json
blog/management/commands/: populate.py
blog/migrations/: 0001_initial.py  0002_auto_20171010_1506.py  0003_entry_search_vector.py  0004_blog_lang.py  0005_alter_author_id_alter_blog_id_alter_entry_id.py
django_queries/: settings.py  urls.py  wsgi.py
djangoqueries/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
requirements/: common.in  common.ini  common.txt  dev.ini  dev.txt  local.in  local.txt  test.in  test.txt  tests.ini  tests.txt
shows/: __init__.py  apps.py  managers.py  models.py  tests.py
shows/migrations/: 0001_initial.py  0002_trigram.py  0003_alter_band_id_alter_genre_id.py
