[coverage:run]
branch = True
omit =
    .tox/*
    */asgi.py
    */management/*
    */migrations/*
    */wsgi.py
    manage.py
source = .

[flake8]
exclude =
    __pycache__,
    .git,
    .tox,
    */migrations/*,
ignore = D202,E203,E266,E501,W503
max-line-length = 80
select = B,C,E,F,I,W,T4,B9

[isort]
combine_as_imports = True
default_section = THIRDPARTY
known_first_party = blog, djangoqueries, shows
known_third_party = django
profile = black

[metadata]
license-file = LICENSE.md

[mypy]
cache_dir=/dev/null
check_untyped_defs=False
disallow_untyped_calls=False
disallow_untyped_defs=False
follow_imports=skip
ignore_missing_imports=True
python_version = 3.8
show_column_numbers=True
show_error_context=False
strict_optional=True
warn_no_return=True
warn_redundant_casts=False
warn_return_any=False
warn_unused_ignores=False

[testenv:coverage]
commands =
    pip-sync {toxinidir}/requirements/tests.txt
    coverage run {toxinidir}/manage.py test --noinput
commands_pre =
    black --check .
    flake8
    isort --check-only .
    mypy .
deps = -r{toxinidir}/requirements/tests.txt
setenv =
    DJANGO_SETTINGS_MODULE=djangoqueries.settings

[testenv:report]
commands = coverage report
deps = coverage~=5.3.0

[testenv:reporthtml]
commands = coverage html
deps = coverage~=5.3.0

[testenv:reportxml]
commands = coverage xml -o test-reports/coverage.xml
deps = coverage~=5.3.0

[tool:pytest]
DJANGO_SETTINGS_MODULE=djangoqueries.settings

[tox:tox]
envlist = coverage
skipsdist = True
