[flake8]
exclude =
    __pycache__,
    .git,
    .mypy_cache,
    .pytest_cache,
    .tox,
    .venv,
    .vscode*,
    */migrations/*,
ignore = E501,T499,W503
max-line-length = 80
mypy_config = setup.cfg
select = B,C,D,E,F,I,W,T4,B9

[metadata]
license-file = LICENSE.md

[testenv:coverage]
commands =
    python3 -m coverage run {toxinidir}/manage.py test --noinput
commands_pre =
    black --check .
    isort --check .
    flake8
    mypy .
deps = -r{toxinidir}/requirements/test.txt
setenv =
    DJANGO_SETTINGS_MODULE=djangoqueries.settings

[testenv:report]
commands = coverage report
deps = coverage[toml]~=6.3.0

[testenv:reporthtml]
commands = coverage html
deps = coverage[toml]~=6.3.0

[testenv:reportxml]
commands = coverage xml -o test-reports/coverage.xml
deps = coverage[toml]~=6.3.0

[tox:tox]
envlist = coverage
skipsdist = True
